force-app/main/default/objects/Restrict_Scheduling_Dates__c/Restrict_Scheduling_Dates__c.object-meta.xml
<CustomObject>
    <label>Restrict Scheduling Dates</label>
    <nameField>
        <displayFormat>{YY}{MM}-{0}</displayFormat>
        <label>Restrict Scheduling Dates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Restrict Scheduling Dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>