force-app/main/default/objects/Restrict_Scheduling_Dates__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Restrict Scheduling Dates</relationshipLabel>
    <relationshipName>Restrict_Scheduling_Dates</relationshipName>
    <type>Lookup</type>
</CustomField>