force-app/main/default/objects/Restrict_Scheduling_Dates__c/fields/Full_Day__c.field-meta.xml
<CustomField>
    <fullName>Full_Day__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Full Day</label>
    <type>Checkbox</type>
</CustomField>