force-app/main/default/objects/Restrict_Scheduling_Dates__c/fields/Restricted_Date_Range_From__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Date_Range_From__c</fullName>
    <label>Restricted Date Range From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>