force-app/main/default/objects/Restrict_Scheduling_Dates__c/validationRules/ToDate_Cannot_Be_Less_Than_From_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>ToDate_Cannot_Be_Less_Than_From_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Restricted_Date_Range_To__c &lt;=  Restricted_Date_Range_From__c</errorConditionFormula>
    <errorMessage>&apos;Restricted Date Range To&apos; Cannot be Equal To or Less Than &apos;Restricted Date Range From&apos;</errorMessage>
</ValidationRule>